--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
         crossorigin="anonymous"></script>
+
+   
+    <script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
     <script src="scripts\simple.int.calc.js"></script>
     <link rel="stylesheet" href="npr.css">
 </head>
@@ -24,7 +27,9 @@
 
     <body>
         <center>
-            <p class="head"><h1>Simple Interest Calculation</h1></p>
+            <p class="head">
+                <h1>Simple Interest Calculation</h1>
+            </p>
         </center>
         <div class="container">
             Amount:
@@ -37,8 +42,12 @@
             <br/>
 
             <p id="result"></p>
-            <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" data-content="Result shows interest over x number of years." onclick="calculate()">Calculate</button>
-        </div>
+            <button type="button" class="btn btn-lg btn-danger" data-toggle="popover" data-content="Result shows interest over x number of years."
+                onclick="calculate()">Calculate</button>
+           </div>
+            <div class="text">
+           <p>Like This? See More<a href="https://codepen.io/dacogemini/"> @Codepen <i class="fab fa-codepen"></i></p></a>
+            </div>
     </body>
 
 </html>
